public/stylesheets/style.css
/* ... */
.hidden {
    display: none;
}

.starwars-font {
    font-family: 'StarJedi', sans-serif;
}

.fa-ethereum {
    margin-top: 4px;
}

.star-wars-money img, .star-wars-money i {
    height: 24px;
    width: 24px;
}

.star-wars-money, .star-wars-points {
    display: flex;
    align-items: center;
}

.star-wars-money span, .star-wars-points span {
    margin-top: 4px;
    margin-left: 8px;
}

@font-face {
    font-family: 'RobotoRegular';
    src: url("fonts/Roboto/Roboto-Regular.woff");
}

@font-face {
    font-family: 'RobotoBold';
    src: url("fonts/Roboto/Roboto-Bold.woff");
}

@font-face {
    font-family: 'Starjedi';
    src: url("fonts/starjedi/StarJedi.woff");
}

/* Header */

header {
    height: 92px;
    display: flex;
    padding: 32px 8px 32px 22px !important;
    align-items: center;
    justify-content: space-between;
    z-index: 100;
    position: relative;
}

header nav {
    display: flex;
    align-items: center;
}

header h6 {
    margin-bottom: 0;
}

header nav ul {
    margin: 0;
}

header nav .logo, header .profile-pic {
    width: 84px;
    height: 80px;
}

header .profile-pic img {
    object-fit: cover;
}

header nav .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 32px;
    text-align: center;
    line-height: 1;
    font-family: 'StarJedi', sans-serif;
    color: var(--dark);
    text-decoration: none;
}

header nav .logo:hover {
    cursor: pointer;
}

header .profile-pic {
    height: 60px;
    width: 60px;
}

header .profile-pic img, header nav .logo img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

header .menu-items li {
    list-style-type: none;
    padding: 20px
}

header .menu-items li a {
    color: var(--font);
    text-decoration: none;
}

header .menu-items li a:hover {
    color: var(--font);
}

header #hamburger-menu {
    display: none;
}

header .menu-items a:hover {
    border-bottom: 2px solid var(--accent);
}

#bell, #icon-header {
    color: var(--font);
}

#bell:hover, #icon-header:hover {
    cursor: pointer;
    color: var(--accent);
}

.disconnect, .bell {
    margin: 0;
    display: flex;
    align-items: center;
}

header .disconnect button, header .bell button {
    border: none;
    border-radius: 15px;
    background-color: var(--background);
}

header .disconnect i:hover {
    color: var(--red);
}

header .bell i:hover {
    color: var(--blue);
}

header .gestion-button {
    font-size: 1.1rem;
}

/* ScoreBoard */

#scoreBoardContainer {
    margin-top: 4em;
    margin-bottom: 8em;
}

#scoreBoard {
    position: relative;
    width: 100%;
    padding: 0;
}

.title {
    position: relative;
    max-width: 75vw;
}

.rebel h1 , .rebel h6 {
    text-align: start;
}

.sith h1 {
    text-align: end;
}

.rebel-sith {
    position: absolute;
    top: -135%;
}

.rebel-sith > img {
    width: 15%;
}

.rebel-sith-logo > img {
    position: relative;
    width: 10%;
}

.score-bar {
    background: black;
    justify-content: flex-start;
    border-radius: 50px;
    align-items: center;
    position: relative;
    padding: 0 5px;
    display: flex;
    height: 40px;
    width: 500px;
}

.score-value-left {
    position: absolute;
    right: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #367bc4;
    height: 30px;
}

.score-value-right {
    position: absolute;
    left: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #d1463d;
    height: 30px;
}

.score-points {
    position: absolute;
    width: 100%;
    top: 50px;
}

.position0 {
    border: 3px solid gold;
}

.position1 {
    border: 3px solid silver;
}

.position2 {
    border: 3px solid var(--bronze);
}

/*notifications*/
.card, .box-shadow {
    border-radius: 6px; !important;
}

.box-shadow-sith {
    box-shadow: 4px 4px  rgba(255, 0, 0, 0.25);
}

.box-shadow-rebel {

    box-shadow: -4px 4px 0 0 rgba(0, 0, 255, 0.25);
}

.notification {
    font-size: small;
    border-radius: 1rem;
}

.notification-row {
    display: flex;
    justify-content: space-between;
}

.notification .time {
    font-size: xx-small;
}

.notification-check {
    color: black;
}

.notification-check:hover {
    color: var(--accent) !important;
}

/* Team Member */

#teams .col-lg-5 {
    flex: 0 0 48.67%;
    max-width: 100%;
}

.team {
    margin: 1rem;
    min-width: 15rem;
    border-radius: 1rem;
}

.menu-items > li{
    font-family: 'Starjedi', sans-serif;
    color: var(--dark);
}

.menu-items > li, h1, h2, h3, h4, h5, h6 {
    font-family: 'RobotoBold', sans-serif;
    color: var(--dark);
}

body {
    font-size: 1.1rem;
    font-family: 'Roboto', sans-serif;
}

.leftImg {
    position: relative;
    left: 120px;
    width: 125%;
}

#correctedBtn {
    opacity: .5;
}

input#exerciseUpload {
    width: 0;
}

#uploadImgBtn {
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: center;
}

#uploadImgBtn label {
    margin: 0;
    padding: 2px 75px;
}

#uploadImgBtn #uploadLabel i {
    padding-right: 1rem;
}

#uploadLabel {
    background-color: var(--accent);
    padding: 12px 28px;
    border-radius: .25rem;
}

#submitLabel {
    padding: 12px 28px;
    border-radius: .25rem;
}

#submitLabel.disabled {
    background-color: var(--grey);
    opacity: 50%;
}

.mission-submit label {
    background-color: var(--accent);
}

#uploadLabel i, #submitLabel i {
    padding-right: 10px;
}



.btn-yellow {
    background-color: var(--accent);
    color: var(--font);
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    padding: 16px 32px;
}

.btn-yellow:hover {
    text-decoration: none;
    color: var(--font);
}
/* ... */

